# sourmash-rust

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
benches/: index.rs
ci/: install.sh  script.sh
src/: errors.rs  ffi.rs  file.rs  from.rs  index.rs  lib.rs  main.rs  nodegraph.rs  sourmash.yml  utils.rs  wasm.rs
src/index/: linear.rs  mod.rs  nodegraph.rs  sbt.rs  search.rs  storage.rs
tests/: finch.rs  minhash.rs  nodegraph.rs  signature.rs  test.rs
tests/data/: genome-s10+s11.sig  v5.sbt.json
