[package]
name = "sourmash"
version = "0.1.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/luizirber/sourmash-rust"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"

[lib]
name = "sourmash"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto=true

[features]
from-finch = ["finch", "needletail"]

[build-dependencies]
cbindgen = "0.6.1"

[dependencies]
backtrace = "0.3.4"
error-chain = "0.12"
finch = { version = "0.1.6", optional = true }
lazy_static = "1.0.0"
md5 = "0.3.7"
murmurhash3 = "~0.0.5"
needletail = { version = "~0.1.4", optional = true }
ordslice = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.2"
