[package]
name = "sourmash"
version = "0.1.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/luizirber/sourmash-rust"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"

[lib]
name = "sourmash"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto=true

[features]
from-finch = ["finch", "needletail"]

[build-dependencies]
cbindgen = "0.6.1"

[dependencies]
backtrace = "0.3.4"
byteorder = "^1.2"
exitfailure = "0.5.1"
failure = "0.1.3"
failure_derive = "0.1.3"
finch = { version = "~0.1.6", optional = true }
fixedbitset = "^0.1.9"
lazy_static = "1.0.0"
md5 = "0.6.0"
murmurhash3 = "~0.0.5"
needletail = { version = "~0.2.1", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.2"

[dev-dependencies]
proptest = "^0.8"
